--- a/spotify-code.Rmd
+++ b/spotify-code.Rmd
@@ -8,10 +8,6 @@ output:
     toc_float: yes
 ---
 
-```{r, include = FALSE}
-knitr::opts_chunk$set(echo = FALSE)
-```
-
 # Spotify Analysis
 
 ## Introduction
@@ -28,6 +24,87 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Results
 
+```{r, message = FALSE, echo = FALSE}
+# Load library
+library(rjags)
+```
+
+```{r, echo = FALSE}
+# Read data 
+data = read.table("ungrouped_spotify_data.txt")
+
+# Make the streams per day variable. 
+data$streams_day = data$stream / data$days
+
+# This orders alphabetically by genre 
+# This is vital for our bugs model to makes sense
+data = data[order(data$top.genre), ]
+
+# This resets the row numbers so again the bugs model works
+rownames(data) = NULL
+
+# Shows how the indices were selected to use in the bugs file
+indicator = c(match(unique(data$top.genre), data$top.genre), length(data[,1])+1)
+```
+
+```{r, echo = FALSE, message = FALSE}
+# Add thousands of streams per day to Y
+d = list(Y = data[ , 4])
+
+# Set arbitrary uninformative priors
+# Feel free to change a, b for testing purposes
+inits = list(list(a = .0001, b = .0001), 
+              list(a = 1000, b = 1000), 
+              list(a = .0001, b = 1000))
+
+#Run the JAGS model
+m = jags.model("hierarchical4.bug", d, inits, n.chains = 3)
+```
+
+```{r, echo = FALSE}
+# In paper, only plot the theta graphs
+z = coda.samples(m, c("theta"), n.iter = 1e5)
+```
+
+The trace and densities of $\lambda_{ij}$ were not plotted due to to there being 100 of them. They met all of the convergence requirements that $\theta_j$ did.
+
+The trace and densities of $\theta_j$ for $j = 1, 2, ..., 7$ are plotted below. 
+
+```{r, echo = FALSE}
+### Assess convergence
+plot(z, smooth = FALSE, ask = TRUE)
+```
+
+The autocorrelation plots of $\theta_j$ for $j = 1, 2, ..., 7$ are plotted below. 
+
+```{r, echo = FALSE}
+# Autocorrelation plots for theta_j
+autocorr.plot(z[1], ask = TRUE)
+```
+
+The Gelman diagnsotics of $\theta_j$ for $j = 1, 2, ..., 7$ are plotted below. 
+
+```{r, echo = FALSE}
+# Gelman diagnostics
+gelman.diag(z, autoburnin = FALSE)
+```
+
+The Gelman plots of $\theta_j$ for $j = 1, 2, ..., 7$ are plotted below. are below
+
+```{r, echo = FALSE}
+# Check shrink factor after burn-in
+gelman.plot(z, autoburnin = FALSE, ask = TRUE)
+```
+
+Summary statistics of $\theta_j$ for $j = 1, 2, ..., 7$:
+
+```{r, echo = FALSE}
+# Check summary statistics and verify that Time-series SE are less than 1/20 of SD
+summary(z)
+```
+
+
+## Discussion
 
 
 
@@ -36,18 +113,14 @@ knitr::opts_chunk$set(echo = FALSE)
 
 
 
-Analysis
+
+
+## Contributions
 
 
 
 
-
-<!-- ## Discussion -->
-
-
-
-
-<!-- ## Appendix -->
+## Appendix
 
 ```{r, eval = FALSE}
 # Load library
@@ -63,58 +136,45 @@ data$streams_day = data$stream / data$days
 # This is vital for our bugs model to makes sense
 data = data[order(data$top.genre), ]
 
-#This resets the row numbers so again the bugs model works
+# This resets the row numbers so again the bugs model works
 rownames(data) = NULL
 
-#This is just here since to show why I put the values I did in the bugs model variable ind
+# Shows how the indices were selected to use in the bugs file
 indicator = c(match(unique(data$top.genre), data$top.genre), length(data[,1])+1)
 
-#The bug model is weird, but essentially I coded it so each genre has its own loop over it's songs. 
-#Please check that it makes sense
-#a and b needed priors in order for the model to work I think. 
-# I'm not sure I got the priors/hyperpriors assigned correctly
-# I got ride of N in our model since it doesn't really make sense for this model since
-# our data doesn't really have "trials" per se
+# Add thousands of streams per day to Y
+d = list(Y = data[ , 4])
 
+# Set arbitrary uninformative priors
+# Feel free to change a, b for testing purposes
+inits = list(list(a = .0001, b = .0001), 
+              list(a = 1000, b = 1000), 
+              list(a = .0001, b = 1000))
 
-#Assign the thousands of streams per day to Y
-d <- list(Y=data[,4])
+#Run the JAGS model
+m = jags.model("hierarchical4.bug", d, inits, n.chains=3)
 
-#I set random priors for a and b. I think those are the only ones that need it.
-# Feel free to change the numbers when testing
-inits <- list(list(a=.0001, b=.0001), 
-              list(a=1000, b=1000), 
-              list(a=.0001, b=1000))
+# Includes lambda for convergence checking
+x = coda.samples(m, c("theta", "lambda"), n.iter=1e5)
 
-#Run the jags model
-m <- jags.model("hierarchical4.bug", d, inits, n.chains=3)
-
-### Make a preliminary run of 1000 iterations, with monitoring
-#NOTE: don't do too many iterations or it will take forever to plot the graphs/exit the code
-
-x <- coda.samples(m, c("theta", "lambda"), n.iter=1000)
-
+# In paper, only plot the theta graphs
+z = coda.samples(m, c("theta"), n.iter = 1e5)
 
 ### Assess convergence
 
-plot(x, smooth=FALSE, ask=TRUE)
+plot(x, smooth = FALSE, ask = TRUE)
 
-autocorr.plot(x[1], ask=TRUE)
+autocorr.plot(x[1], ask = TRUE)
 
-gelman.diag(x, autoburnin=FALSE)
+gelman.diag(x, autoburnin = FALSE)
 
-gelman.plot(x, autoburnin=FALSE, ask=TRUE)
+gelman.plot(x, autoburnin = FALSE, ask = TRUE)
 
+# Check statistics after burn-in
+summary(x)
 
-### Check stats after burn-in
-#For some reason this never has worked for me in any assignment
-
-summary(window(x, 400))
-
-# Verify: Time-series SE less than 1/20 of SD
-#Window seems to not work properly
-
-plot(window(x, 400), trace=FALSE, ask=TRUE)
+# Verify that Time-series SE less than 1/20 of SD
+plot(x, trace=FALSE, ask=TRUE)
 ```
 
 ```{r, eval = FALSE}
